@@ -254,6 +254,10 @@ Generic
 options are discussed in
 .i docs/INSTALL .
 Options that are specific to the \*M package are described below.
+.if r MAN-OPTIONS-ONLY \{
+.lp
+MAN\-OPTIONS\-BEGIN
+\}
 .lp
 .ip \-\-enable\-setuid[=ARG]
 By default,
@@ -306,3 +310,7 @@ Normally,
 will automatically try to create cat files corresponding to manual files
 when a manual page is read.
 This flag suppresses this behaviour.
+.if r MAN-OPTIONS-ONLY \{
+.lp
+MAN\-OPTIONS\-END
+\}
